# passwordManager

./: CMakeLists.txt  README.md  passwords.db
include/: database.h  utils.h
src/: database.cpp  main.cpp  utils.cpp
